viam: Only update one node and not both